[build-system]
requires = ["poetry==0.12.10"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "flake8-print"
version = "3.1.1"
description = "print statement checker plugin for flake8"
readme = "README.md"

license = "MIT"

authors = [
    "Joseph Kahn <josephbkahn@gmail.com>"
]

repository = "https://github.com/jbkahn/flake8-print"
homepage = "https://github.com/jbkahn/flake8-print"
keywords = [
  "flake8",
  "plugin",
  "linting",
  "print",
  "code quality"
]

classifiers = [
  'Development Status :: 3 - Alpha',
  'Environment :: Console',
  'Framework :: Flake8',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 2',
  'Programming Language :: Python :: 3',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Software Development :: Quality Assurance',
]


include = ["pyproject.toml", "flake8_print.py"]

[tool.poetry.plugins."flake8.extension"]
T00 = "flake8_print:PrintChecker"

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^2.7"
"flake8" = ">=1.5"
six = "*"
pycodestyle = "*"

[tool.poetry.dev-dependencies]
black = { version = "^19.3b0", python = "~3.6 || ~3.7" }
pytest = "*"

[tool.black]
line-length = 120
target-version = ['py36', 'py27']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
skip-numeric-underscore-normalization = true
